spikes/shapes/shape-evidence/tests/ui/fail/duplicate_axes.stderr
error[E0080]: evaluation panicked: reduction axes must be unique
 --> src/lib.rs
  |
  |         const { assert!(A != B, "reduction axes must be unique") };
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `shape_evidence_spike::Builder::reduce_axes2::<shape_evidence_spike::F32, 2, 1, 1>::{constant#1}` failed here

note: erroneous constant encountered
 --> src/lib.rs
  |
  |         const { assert!(A != B, "reduction axes must be unique") };
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn shape_evidence_spike::Builder::reduce_axes2::<shape_evidence_spike::F32, 2, 1, 1>`
 --> tests/ui/fail/duplicate_axes.rs:7:13
  |
7 |     let _ = builder.reduce_axes2(ranked, Axes2::<1, 1>);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
